--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,15 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>Product Order</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!--    <script th:inline="javascript">-->
+<!--        $(document).ready(function () {-->
+<!--            $('#tenSP').change(function () {-->
+<!--                const selectedProduct = $(this).val();-->
+<!--                $.ajax({-->
+<!--                    url: '/get-product-price',-->
+<!--                    type: 'GET',-->
+<!--                    data: {productName: selectedProduct},-->
+<!--                    success: function (data) {-->
+<!--                        $('input[name="gia"]').val(data);-->
+<!--                    },-->
+<!--                    error: function (xhr, status, error) {-->
+<!--                        console.error(xhr.responseText);-->
+<!--                    }-->
+<!--                });-->
+<!--            });-->
+<!--        });-->
+<!--    </script>-->
 </head>
 <body>
 <h1 style="text-align: center">Order Product</h1>
 <form action="/order-product" method="post" style="width: 100%; height: 500px; text-align: center">
-    <input type="text" name="tenSP" placeholder="Ten San Pham" style="width: 200px; height: 40px;">
+    <select id="tenSP" name="tenSP" style="width: 200px; height: 40px;">
+        <option value="" selected disabled hidden>Chọn sản phẩm</option>
+        <option th:each="product : ${products}"
+                th:value="${product.name}"
+                th:text="${product.name}">
+        </option>
+    </select>
     <br>
+<!--    <input type="text" name="gia" placeholder="Giá" readonly style="width: 200px; height: 40px; margin-top: 15px;">-->
+<!--    <br>-->
     <input type="text" name="soLuong" placeholder="So luong" style="width: 200px; height: 40px; margin-top: 15px">
     <br>
     <input type="text" name="tenKH" placeholder="Ten Khach Hang" style="width: 200px; height: 40px; margin-top: 15px">
+    <br>
+    <input type="text" name="diaChi" placeholder="Dia chi" style="width: 200px; height: 40px; margin-top: 15px">
     <br>
     <input type="text" name="email" placeholder="Email" style="width: 200px; height: 40px; margin-top: 15px">
     <br>
